cluster/infrastructure/observability/kube-prometheus-stack/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://prometheus-adm.${CLUSTER_DOMAIN}"
    gethomepage.dev/group: Observability
    gethomepage.dev/weight: "20"
    gethomepage.dev/name: Prometheus
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/description: Metrics database
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: kube-system
  hostnames:
    - "prometheus-adm.${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: ExternalAuth
          externalAuth:
            backendRef:
              group: ""
              kind: Service
              name: authelia
              namespace: authelia
              port: 80
            protocol: HTTP
            http:
              path: /api/authz/ext-authz/
              allowedHeaders:
                - cookie
                - authorization
                - x-forwarded-proto
                - x-forwarded-host
                - x-forwarded-uri
                - x-forwarded-for
                - accept
              allowedResponseHeaders:
                - remote-user
                - remote-groups
                - remote-name
                - remote-email
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
